--- a/client/src/index.css
+++ b/client/src/index.css
@@ -3,5 +3,7 @@
 @tailwind utilities;
 
 body {
-  background-color: black;
+  background-color: rgb(0, 0, 0);
+  /* background-image: url("./assets/background.jpg");
+  background-position: center; */
 }
