--- a/client/src/index.css
+++ b/client/src/index.css
@@ -3,7 +3,7 @@
 @tailwind utilities;
 
 body {
-  background-color: rgb(0, 0, 0);
-  /* background-image: url("./assets/background.jpg");
-  background-position: center; */
+  /* background-color: rgb(0, 0, 0); */
+  background-image: url("./assets/background.svg");
+  background-position: center;
 }
